--- a/School-3/academic/index.html
+++ b/School-3/academic/index.html
@@ -51,9 +51,60 @@
     </header>
 
     <main>
-        <div class="big__gap">
+        <section class="section__1">
+            <div style="grid-column: 1;" class="grid__chaild">
+                <div class="leftnotice__nav__box">
 
-        </div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/GfO-3Oir-qM" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+                    <h4>Recent notice:</h4>
+                    <hr>
+                    <div class="notice__grid__chaild">
+                        <a href="#"><i class="far fa-file"></i>&nbsp;Exam notice 2021</a>
+                        <a href="#"><i class="far fa-file"></i>&nbsp;Exam routine 2021</a>
+                        <a href="#"><i class="far fa-file"></i>&nbsp;Online class Routine 2021</a>
+                        <a href="#"><i class="far fa-file"></i>&nbsp;Fees payment</a>
+                    </div>
+                </div>
+            </div>
+
+
+            <div style="grid-column: 2/ span 2;" class="grid__chaild grid__chaild__big">
+                <div class="center__top__section">
+                    <h4>Administration</h4>
+                    <hr>
+                    <br>
+                    <br>
+                    <ul>
+                        <li><h4 class="addministration__list"><a style="color:#179BD7; text-decoration: none;" href="#">Governing Body</a></h4></li>
+                        <li><h4 class="addministration__list"><a style="color:#179BD7; text-decoration: none;" href="#">Principal</a> </h4></li>
+                        <li><h4 class="addministration__list"><a style="color:#179BD7; text-decoration: none;" href="#">Teachers</a></h4></li>
+                        <li><h4 class="addministration__list"><a style="color:#179BD7; text-decoration: none;" href="#">Office Stuffs</a></h4></li>
+                    </ul>
+                </div>
+            </div>
+
+
+            <div style="grid-column: 4;" class="grid__chaild">
+                <div class="perabout__box">
+
+                    <h3>Principal</h3>
+                    <hr>
+                    <img class="princ__img" src="../media/principal.jpg" alt="">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum illum nam quo velit voluptatibus
+                        autem maxime eum, ullam labore sint?</p>
+                </div>
+                <br>
+                <div class="perabout__box">
+
+                    <h3>Principal</h3>
+                    <hr>
+                    <img class="princ__img" src="../media/viceprincipal.jpg" alt="">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum illum nam quo velit voluptatibus
+                        autem maxime eum, ullam labore sint?</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
