--- a/School-3/index.html
+++ b/School-3/index.html
@@ -67,9 +67,64 @@
                     </div>
                 </div>
             </div>
-            <div style="grid-column: 2/ span 2;" class="grid__chaild grid__chaild__big">
 
+
+            <div style="grid-column: 2/ span 2;" class="grid__chaild grid__chaild__big">
+                <div class="center__top__section">
+                    <h3>Welcome to Hello School</h3>
+                <hr>
+                <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"></li>
+                        <li data-bs-target="#carouselExampleDark" data-bs-slide-to="1"></li>
+                        <li data-bs-target="#carouselExampleDark" data-bs-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="1000">
+                            <img src="media/Slide image/image-3-1920.jpg"
+                                srcset="media/Slide image/image-3-1440.jpg 1440w, media/Slide image/image-3-960.jpg 960w, media/Slide image/image-3-480.jpg 480"
+                                class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <!-- <h5>First slide label</h5> -->
+                                <!-- <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p> -->
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="1000">
+                            <img src="media/Slide image/image-1-1920.jpg"
+                                srcset="media/Slide image/image-1-1440.jpg 1440w, media/Slide image/image-1-960.jpg 960w, media/Slide image/image-1-480.jpg 480"
+                                class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <!-- <h5>Second slide label</h5> -->
+                                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="1000">
+                            <img src="media/Slide image/image-2-1920.jpg"
+                                srcset="media/Slide image/image-2-1440.jpg 1440w, media/Slide image/image-2-960.jpg 960w, media/Slide image/image-2-480.jpg 480"
+                                class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <!-- <h5>Third slide label</h5> -->
+                                <!-- <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p> -->
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <a class="carousel-control-prev" href="#carouselExampleDark" role="button" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleDark" role="button" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </a> -->
+                </div>
+                <h3>About</h3>
+                <hr>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi atque, quasi rerum dignissimos mollitia magnam dicta? Et maxime quaerat repellat!</p>
+                <a href="#">...[Read More]</a>
+                </div>
             </div>
+
+
             <div style="grid-column: 4;" class="grid__chaild">
                 <div class="perabout__box">
 
@@ -110,26 +165,36 @@
 
         <section class="section__3">
             <div style="text-align: right;" class="grid__chaild">
-                <a href="./gallery/index.html">Recent Photos</a>
+                <a href="#">Recent Photos</a>
             </div>
             <div style="background-color: #10152C; color: #FDB713;" class="grid__chaild">
-                <a href="./gallery/index.html" style=" color: #FDB713;">Recent Videos</a>
+                <a href="#" style=" color: #FDB713;">Recent Videos</a>
             </div>
         </section>
         <section class="section__4">
-            <div class="fb__iframe">
+            <div class="fb__iframe" style="margin-top:10px;height: 354px; overflow: hidden; border-radius: 10px;">
                 <div id="fb-root" style="width: 300px; border-radius: 20px;"></div>
                 <script async defer crossorigin="anonymous"
                     src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v9.0" nonce="9rIhjqty"></script>
                 <div class="fb-page" data-href="https://www.facebook.com/facebook" data-tabs="timeline" data-width=""
                     data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
-                    data-show-facepile="true" >
+                    data-show-facepile="true">
                     <blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore"><a
                             href="https://www.facebook.com/facebook">Facebook</a></blockquote>
                 </div>
             </div>
             <div class="twetter__iframe" style="width: 300px;">
-                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Sunsets don&#39;t get much better than this one over <a href="https://twitter.com/GrandTetonNPS?ref_src=twsrc%5Etfw">@GrandTetonNPS</a>. <a href="https://twitter.com/hashtag/nature?src=hash&amp;ref_src=twsrc%5Etfw">#nature</a> <a href="https://twitter.com/hashtag/sunset?src=hash&amp;ref_src=twsrc%5Etfw">#sunset</a> <a href="http://t.co/YuKy2rcjyU">pic.twitter.com/YuKy2rcjyU</a></p>&mdash; US Department of the Interior (@Interior) <a href="https://twitter.com/Interior/status/463440424141459456?ref_src=twsrc%5Etfw">May 5, 2014</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <blockquote class="twitter-tweet">
+                    <p lang="en" dir="ltr">Sunsets don&#39;t get much better than this one over <a
+                            href="https://twitter.com/GrandTetonNPS?ref_src=twsrc%5Etfw">@GrandTetonNPS</a>. <a
+                            href="https://twitter.com/hashtag/nature?src=hash&amp;ref_src=twsrc%5Etfw">#nature</a> <a
+                            href="https://twitter.com/hashtag/sunset?src=hash&amp;ref_src=twsrc%5Etfw">#sunset</a> <a
+                            href="http://t.co/YuKy2rcjyU">pic.twitter.com/YuKy2rcjyU</a></p>&mdash; US Department of the
+                    Interior (@Interior) <a
+                        href="https://twitter.com/Interior/status/463440424141459456?ref_src=twsrc%5Etfw">May 5,
+                        2014</a>
+                </blockquote>
+                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </section>
     </main>
@@ -156,11 +221,11 @@
         <section class="footer__section__2">
             <div class="image__bg">
                 <div class="row">
-                    <div class="col-6 footer-2__news">
+                    <div class="col-12 col-sm-6 footer-2__news">
                         Hello School 3 <br>
                         Admission 2021 Going on
                     </div>
-                    <div class="col-6 footer-2__content">
+                    <div class="col-12 col-sm-6 footer-2__content">
                         <span>Hello School</span><br>
                         <span>Hello Road, </span><br>
                         <span>Dhaka, Bangladesh.</span><br>
