--- a/School-3/onlineaddmission/index.html
+++ b/School-3/onlineaddmission/index.html
@@ -51,9 +51,156 @@
     </header>
 
     <main>
-        <div class="big__gap">
+        <section class="section__1">
+            <div style="grid-column: 1;" class="grid__chaild">
+                <div class="leftnotice__nav__box">
 
-        </div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/GfO-3Oir-qM" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+                    <h4>Recent notice:</h4>
+                    <hr>
+                    <div class="notice__grid__chaild">
+                        <a href="#"><i class="far fa-file"></i>&nbsp;Exam notice 2021</a>
+                        <a href="#"><i class="far fa-file"></i>&nbsp;Exam routine 2021</a>
+                        <a href="#"><i class="far fa-file"></i>&nbsp;Online class Routine 2021</a>
+                        <a href="#"><i class="far fa-file"></i>&nbsp;Fees payment</a>
+                    </div>
+                </div>
+            </div>
+
+
+            <div style="grid-column: 2/ span 2;" class="grid__chaild grid__chaild__big">
+                <div class="center__top__section">
+                    <h3>Admission</h3>
+                    <hr>
+                    <h4>Admission Form-2021</h4>
+                    <hr>
+                    <img src="../media/form/admission-2021.png" alt="">
+                    <br>
+                    <br>
+                    <h4>Admission Guide</h4>
+                    <hr>
+                    <ul>
+                        <li>
+
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, cumque.</p>
+                        </li>
+                        <li>
+
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit necessitatibus ea molestias
+                                fugit ipsam laboriosam, alias hic maiores expedita deleniti?</p>
+                        </li>
+                        <li>
+
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nobis corporis illum,
+                                voluptates iusto quidem?</p>
+                        </li>
+                        <li>
+
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, cumque.</p>
+                        </li>
+                        <li>
+
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit necessitatibus ea molestias
+                                fugit ipsam laboriosam, alias hic maiores expedita deleniti?</p>
+                        </li>
+                        <li>
+
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nobis corporis illum,
+                            voluptates iusto quidem?</p>
+                        </li>
+                        <li>
+
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, cumque.</p>
+                        </li>
+                    </ul>
+                    
+                    <br>
+                    <h4>Admission Rulse</h4>
+                    <hr>
+                    <ul>
+
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, cumque.</li>
+                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit necessitatibus ea molestias
+                            fugit ipsam laboriosam, alias hic maiores expedita deleniti?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nobis corporis illum,
+                            voluptates iusto quidem?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, cumque.</li>
+                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit necessitatibus ea molestias
+                            fugit ipsam laboriosam, alias hic maiores expedita deleniti?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nobis corporis illum,
+                            voluptates iusto quidem?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, cumque.</li>
+                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit necessitatibus ea molestias
+                            fugit ipsam laboriosam, alias hic maiores expedita deleniti?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nobis corporis illum,
+                            voluptates iusto quidem?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, cumque.</li>
+                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit necessitatibus ea molestias
+                            fugit ipsam laboriosam, alias hic maiores expedita deleniti?</p>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nobis corporis illum,
+                            voluptates iusto quidem?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, cumque.</li>
+                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit necessitatibus ea molestias
+                            fugit ipsam laboriosam, alias hic maiores expedita deleniti?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nobis corporis illum,
+                            voluptates iusto quidem?</li>
+                    </ul>
+                    <br>
+                    <h4>Admission Procedure</h4>
+                    <hr>
+                    <ul>
+
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, cumque.</li>
+                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit necessitatibus ea molestias
+                            fugit ipsam laboriosam, alias hic maiores expedita deleniti?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nobis corporis illum,
+                            voluptates iusto quidem?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, cumque.</li>
+                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit necessitatibus ea molestias
+                            fugit ipsam laboriosam, alias hic maiores expedita deleniti?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nobis corporis illum,
+                            voluptates iusto quidem?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, cumque.</li>
+                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit necessitatibus ea molestias
+                            fugit ipsam laboriosam, alias hic maiores expedita deleniti?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nobis corporis illum,
+                            voluptates iusto quidem?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, cumque.</li>
+                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit necessitatibus ea molestias
+                            fugit ipsam laboriosam, alias hic maiores expedita deleniti?</p>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nobis corporis illum,
+                            voluptates iusto quidem?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, cumque.</li>
+                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit necessitatibus ea molestias
+                            fugit ipsam laboriosam, alias hic maiores expedita deleniti?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nobis corporis illum,
+                            voluptates iusto quidem?</li>
+                    </ul>
+                </div>
+            </div>
+
+
+            <div style="grid-column: 4;" class="grid__chaild">
+                <div class="perabout__box">
+
+                    <h3>Principal</h3>
+                    <hr>
+                    <img class="princ__img" src="../media/principal.jpg" alt="">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum illum nam quo velit voluptatibus
+                        autem maxime eum, ullam labore sint?</p>
+                </div>
+                <br>
+                <div class="perabout__box">
+
+                    <h3>Principal</h3>
+                    <hr>
+                    <img class="princ__img" src="../media/viceprincipal.jpg" alt="">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum illum nam quo velit voluptatibus
+                        autem maxime eum, ullam labore sint?</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
