--- a/School-3/notice/index.html
+++ b/School-3/notice/index.html
@@ -51,9 +51,99 @@
     </header>
 
     <main>
-        <div class="big__gap">
+        <section class="section__1">
+            <div style="grid-column: 1;" class="grid__chaild">
+                <div class="leftnotice__nav__box">
 
-        </div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/GfO-3Oir-qM" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+                    <h4>Recent notice:</h4>
+                    <hr>
+                    <div class="notice__grid__chaild">
+                        <a href="#"><i class="far fa-file"></i>&nbsp;Exam notice 2021</a>
+                        <a href="#"><i class="far fa-file"></i>&nbsp;Exam routine 2021</a>
+                        <a href="#"><i class="far fa-file"></i>&nbsp;Online class Routine 2021</a>
+                        <a href="#"><i class="far fa-file"></i>&nbsp;Fees payment</a>
+                    </div>
+                </div>
+            </div>
+
+
+            <div style="grid-column: 2/ span 2;" class="grid__chaild grid__chaild__big">
+                <div class="center__top__section">
+                    <h4>Recent Notice</h4>
+                    <hr>
+                    <div class="noticeBoard__box">
+                        <div class="noticeBoard__box__header">
+                            <div class="notice__date__box"><span class="to-bar">Jan</span>
+                            <h1>13</h1></div>
+                            <div class="notice__title"><h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, exercitationem!</h4></div>
+                            <div class="notice__subtitle"><h6>Hello School 2021</h6></div>
+                        </div>
+                        <div class="noticeBoard__box__body">
+                            <img src="../media/notice/image1.png" alt="">
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="noticeBoard__box">
+                        <div class="noticeBoard__box__header">
+                            <div class="notice__date__box"><span class="to-bar">Jan</span>
+                            <h1>10</h1></div>
+                            <div class="notice__title"><h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, exercitationem!</h4></div>
+                            <div class="notice__subtitle"><h6>Hello School 2021</h6></div>
+                        </div>
+                        <div class="noticeBoard__box__body">
+                            <img src="../media/notice/image1.png" alt="">
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="noticeBoard__box">
+                        <div class="noticeBoard__box__header">
+                            <div class="notice__date__box"><span class="to-bar">Dec</span>
+                            <h1>13</h1></div>
+                            <div class="notice__title"><h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, exercitationem!</h4></div>
+                            <div class="notice__subtitle"><h6>Hello School 2020</h6></div>
+                        </div>
+                        <div class="noticeBoard__box__body">
+                            <img src="../media/notice/image1.png" alt="">
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="noticeBoard__box">
+                        <div class="noticeBoard__box__header">
+                            <div class="notice__date__box"><span class="to-bar">Dec</span>
+                            <h1>10</h1></div>
+                            <div class="notice__title"><h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, exercitationem!</h4></div>
+                            <div class="notice__subtitle"><h6>Hello School 2020</h6></div>
+                        </div>
+                        <div class="noticeBoard__box__body">
+                            <img src="../media/notice/image1.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div style="grid-column: 4;" class="grid__chaild">
+                <div class="perabout__box">
+
+                    <h3>Principal</h3>
+                    <hr>
+                    <img class="princ__img" src="../media/principal.jpg" alt="">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum illum nam quo velit voluptatibus
+                        autem maxime eum, ullam labore sint?</p>
+                </div>
+                <br>
+                <div class="perabout__box">
+
+                    <h3>Principal</h3>
+                    <hr>
+                    <img class="princ__img" src="../media/viceprincipal.jpg" alt="">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum illum nam quo velit voluptatibus
+                        autem maxime eum, ullam labore sint?</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
